fix: remove className setting__button-wraper and rename setting__submit button to setting__save-button

--- a/client/src/styles/Button.css
+++ b/client/src/styles/Button.css
@@ -13,16 +13,11 @@ button {
   overflow: hidden;
 }
 
-.setting__submit-button {
+.setting__save-button {
   width: 70%;
   height: 40px;
   font-size: medium;
   margin-top: 10px;
-}
-
-.logout__button-wrapper {
-  width: 100%;
-  margin-top: auto;
 }
 
 .logout__button {
